# ai-sales-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agents/: follow_up.py  inbound_qualifier.py  lead_finder.py  outreach.py  personalizer.py  pipeline.py  scorer.py  state.py
api/: main.py
config/: icp.yaml  thresholds.yaml
config/sequences/: demo-book.yaml  reply-first.yaml  trial-signup.yaml
db/: models.py  session.py
db/migrations/: 001_initial.sql
prompts/: follow_up.md  inbound_qualifier.md  personalizer.md  scorer.md
tests/: conftest.py
tests/test_agents/: test_follow_up.py  test_inbound_qualifier.py  test_lead_finder.py  test_outreach.py  test_personalizer.py  test_pipeline.py  test_scorer.py
tests/test_api/: test_endpoints.py  test_main.py
tests/test_db/: test_models.py
tests/test_tools/: test_apollo.py  test_hunter.py  test_linkedin.py  test_sendgrid.py
tools/: apollo.py  calendly.py  hubspot.py  hunter.py  linkedin.py  sendgrid.py
